[fix] Chrome Button default border thickness (should be 1 to match standard button border thickness)
[fix] CalculatorUpDown Chrome Button to have correct border thickness. (updated screenshot)

--- a/ModernUI.Xceed/ModernUI.Xceed.Toolkit/Assets/Controls/CalculatorUpDown.xaml
+++ b/ModernUI.Xceed/ModernUI.Xceed.Toolkit/Assets/Controls/CalculatorUpDown.xaml
@@ -14,6 +14,7 @@
                                        Background="{DynamicResource ButtonBackground}"
                                        BorderBrush="{DynamicResource ButtonBorder}"
                                        CornerRadius="0"
+                                       BorderThickness="1,2,2,2"
                                        RenderChecked="{Binding IsOpen, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=xctk:CalculatorUpDown}}"
                                        RenderEnabled="{Binding IsEnabled, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=xctk:CalculatorUpDown}}"
 									   RenderMouseOver="{TemplateBinding IsMouseOver}"
