[add] DropDownButton style and example.
[add] SplitButton style and example.
[update] Readme and screenshots.

--- a/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/MainWindow.xaml
+++ b/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/MainWindow.xaml
@@ -7,20 +7,36 @@
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
         Style="{StaticResource BlankWindow}"
-        Title="ModernUI.Xceed.Toolkit Example" Height="600" Width="800">
+        Title="ModernUI.Xceed.Toolkit Example" Height="600" Width="412">
 
     <StackPanel>
         <Label Content="Up/Down Examples" Margin="4" />
-        <xctk:ByteUpDown Watermark="Byte Up/Down Example..." Margin="2" />
-        <xctk:CalculatorUpDown Watermark="Calculator Up/Down Example..." Margin="2" />
-        <xctk:DateTimeUpDown Watermark="DateTime Up/Down Example..." Margin="2" />
-        <xctk:DecimalUpDown Watermark="Decimal Up/Down Example..." Margin="2" />
-        <xctk:DoubleUpDown Watermark="Double Up/Down Example..." Margin="2" />
-        <xctk:IntegerUpDown Watermark="Integer Up/Down Example..." Margin="2" />
-        <xctk:LongUpDown Watermark="Long Up/Down Example..." Margin="2" />
-        <xctk:ShortUpDown Watermark="Short Up/Down Example..." Margin="2" />
-        <xctk:SingleUpDown Watermark="Single Up/Down Example..." Margin="2" />
-        <xctk:TimeSpanUpDown Watermark="TimeSpan Up/Down Example..." Margin="2" />
+        <StackPanel>
+            <xctk:ByteUpDown Watermark="Byte Up/Down Example..." Margin="2" />
+            <xctk:CalculatorUpDown Watermark="Calculator Up/Down Example..." Margin="2" />
+            <xctk:DateTimeUpDown Watermark="DateTime Up/Down Example..." Margin="2" />
+            <xctk:DecimalUpDown Watermark="Decimal Up/Down Example..." Margin="2" />
+            <xctk:DoubleUpDown Watermark="Double Up/Down Example..." Margin="2" />
+            <xctk:IntegerUpDown Watermark="Integer Up/Down Example..." Margin="2" />
+            <xctk:LongUpDown Watermark="Long Up/Down Example..." Margin="2" />
+            <xctk:ShortUpDown Watermark="Short Up/Down Example..." Margin="2" />
+            <xctk:SingleUpDown Watermark="Single Up/Down Example..." Margin="2" />
+            <xctk:TimeSpanUpDown Watermark="TimeSpan Up/Down Example..." Margin="2" />
+        </StackPanel>
+
+        <Label Content="Button Examples" Margin="4" />
+        <StackPanel>
+            <xctk:DropDownButton Content="Drop Down Button" Margin="2">
+                <xctk:DropDownButton.DropDownContent>
+                    <TextBlock Padding="4">Drop down button example content...</TextBlock>
+                </xctk:DropDownButton.DropDownContent>
+            </xctk:DropDownButton>
+            <xctk:SplitButton Content="Split Button" Margin="2">
+                <xctk:SplitButton.DropDownContent>
+                    <TextBlock Padding="4">Split button example content...</TextBlock>
+                </xctk:SplitButton.DropDownContent>
+            </xctk:SplitButton>
+        </StackPanel>
     </StackPanel>
 
 </mui:ModernWindow>
