--- a/ModernUI.Xceed/ModernUI.Xceed.Toolkit/Assets/ModernUI.Xceed.Toolkit.xaml
+++ b/ModernUI.Xceed/ModernUI.Xceed.Toolkit/Assets/ModernUI.Xceed.Toolkit.xaml
@@ -4,6 +4,7 @@
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Controls/ButtonChrome.xaml" />
         <ResourceDictionary Source="Controls/ButtonSpinner.xaml" />
+        <ResourceDictionary Source="Controls/Calculator.xaml" />
         <ResourceDictionary Source="Controls/CalculatorUpDown.xaml" />
         <ResourceDictionary Source="Controls/DateTimeUpDown.xaml" />
         <ResourceDictionary Source="Controls/DropDownButton.xaml" />
