[add] Checkbox controls.
[update] Screenshots
[update] Readme

--- a/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/App.xaml
+++ b/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/App.xaml
@@ -9,6 +9,7 @@
                 <ResourceDictionary Source="/FirstFloor.ModernUI;component/Assets/ModernUI.Dark.xaml"/>
                 <ResourceDictionary Source="/ModernUI.Xceed.Toolkit;component/Assets/ModernUI.Xceed.Toolkit.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+            <Color x:Key="AccentColor">#FF2C8742</Color>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
