--- a/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/MainWindow.xaml
+++ b/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/MainWindow.xaml
@@ -16,6 +16,7 @@
             <mui:LinkGroup.Links>
                 <mui:Link DisplayName="UpDown Controls" Source="Pages/UpDownControls.xaml" />
                 <mui:Link DisplayName="Button Controls" Source="Pages/ButtonControls.xaml" />
+                <mui:Link DisplayName="CheckList Controls" Source="Pages/CheckListControls.xaml" />
                 <mui:Link DisplayName="Calculator Control" Source="Pages/CalculatorControl.xaml" />
                 <mui:Link DisplayName="Color Controls" Source="Pages/ColorControls.xaml" />
             </mui:LinkGroup.Links>
