--- a/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/Pages/ButtonControls.xaml
+++ b/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/Pages/ButtonControls.xaml
@@ -10,16 +10,27 @@
 
     <ScrollViewer>
         <StackPanel>
+            
             <xctk:DropDownButton Content="Drop Down Button" Margin="2">
                 <xctk:DropDownButton.DropDownContent>
                     <TextBlock Padding="4">Drop down button example content...</TextBlock>
                 </xctk:DropDownButton.DropDownContent>
             </xctk:DropDownButton>
+            
             <xctk:SplitButton Content="Split Button" Margin="2">
                 <xctk:SplitButton.DropDownContent>
                     <TextBlock Padding="4">Split button example content...</TextBlock>
                 </xctk:SplitButton.DropDownContent>
             </xctk:SplitButton>
+        
+            <xctk:WatermarkTextBox Watermark="Watermark TextBox Example..." Margin="2" />
+        
+            <xctk:WatermarkComboBox Watermark="Watermark ComboBox Example..." Margin="2" >
+                <ComboBoxItem Content="Example A" />
+                <ComboBoxItem Content="Example B" />
+                <ComboBoxItem Content="Example C" />
+            </xctk:WatermarkComboBox>
+
         </StackPanel>
     </ScrollViewer>
 </Page>
