[add] PropertyGrid style, first pass.

--- a/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/MainWindow.xaml
+++ b/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/MainWindow.xaml
@@ -19,6 +19,7 @@
                 <mui:Link DisplayName="CheckList Controls" Source="Pages/CheckListControls.xaml" />
                 <mui:Link DisplayName="Calculator Control" Source="Pages/CalculatorControl.xaml" />
                 <mui:Link DisplayName="Color Controls" Source="Pages/ColorControls.xaml" />
+                <mui:Link DisplayName="Property Grid" Source="Pages/PropertyGrid.xaml" />
             </mui:LinkGroup.Links>
         </mui:LinkGroup>
     </mui:ModernWindow.MenuLinkGroups>
