--- a/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/Pages/About.xaml
+++ b/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/Pages/About.xaml
@@ -1,16 +1,17 @@
 ﻿<Page x:Class="ModernUI.Xceed.Toolkit.Example.Pages.About"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
       Title="About">
 
     <TextBlock TextWrapping="Wrap">
-        ModernUI.Xceed.Toolkit contains all style resources to seamlessly integrate Xceeds WPF extended toolkit into the ModernUI framework.<LineBreak/>
-        <LineBreak/>
-        WPF Extended Toolkit: <Hyperlink NavigateUri="http://wpftoolkit.codeplex.com/">http://wpftoolkit.codeplex.com/</Hyperlink><LineBreak/>
-        ModernUI Framework: <Hyperlink NavigateUri="https://github.com/firstfloorsoftware/mui">https://github.com/firstfloorsoftware/mui</Hyperlink><LineBreak/>
+        ModernUI.Xceed.Toolkit contains all style resources to seamlessly integrate Xceeds WPF extended toolkit into the ModernUI framework.
+        <LineBreak />
+        <LineBreak />
+        WPF Extended Toolkit:
+        <Hyperlink NavigateUri="http://wpftoolkit.codeplex.com/">http://wpftoolkit.codeplex.com/</Hyperlink>
+        <LineBreak />
+        ModernUI Framework:
+        <Hyperlink NavigateUri="https://github.com/firstfloorsoftware/mui">https://github.com/firstfloorsoftware/mui</Hyperlink>
+        <LineBreak />
     </TextBlock>
 </Page>
