--- a/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/Pages/CheckListControls.xaml
+++ b/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/Pages/CheckListControls.xaml
@@ -1,13 +1,7 @@
-﻿<Page x:Class="ModernUI.Xceed.Toolkit.Example.Pages.CheckListControls"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-      mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
-      Title="CheckListControls">
-
+﻿<UserControl x:Class="ModernUI.Xceed.Toolkit.Example.Pages.CheckListControls"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit">
     <ScrollViewer>
         <StackPanel>
             <xctk:CheckListBox Margin="2">
@@ -17,7 +11,7 @@
                 <Label Content="Entry D" />
                 <Label Content="Entry E" />
             </xctk:CheckListBox>
-            <xctk:CheckComboBox  Margin="2">
+            <xctk:CheckComboBox Margin="2">
                 <Label Content="Entry A" />
                 <Label Content="Entry B" />
                 <Label Content="Entry C" />
@@ -26,4 +20,4 @@
             </xctk:CheckComboBox>
         </StackPanel>
     </ScrollViewer>
-</Page>
+</UserControl>
