--- a/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/Pages/ColorControls.xaml
+++ b/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/Pages/ColorControls.xaml
@@ -1,12 +1,7 @@
-﻿<Page x:Class="ModernUI.Xceed.Toolkit.Example.Pages.ColorControls"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-      mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
-      Title="ColorControls">
+﻿<UserControl x:Class="ModernUI.Xceed.Toolkit.Example.Pages.ColorControls"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit">
 
     <ScrollViewer>
         <StackPanel>
@@ -14,4 +9,4 @@
             <xctk:ColorPicker Margin="2" SelectedColor="{DynamicResource AccentColor}" />
         </StackPanel>
     </ScrollViewer>
-</Page>
+</UserControl>
