--- a/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/Pages/PropertyGrid.xaml
+++ b/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/Pages/PropertyGrid.xaml
@@ -1,16 +1,10 @@
-﻿<Page x:Class="ModernUI.Xceed.Toolkit.Example.Pages.PropertyGrid"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-      mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
-      Title="PropertyGrid">
-
+﻿<UserControl x:Class="ModernUI.Xceed.Toolkit.Example.Pages.PropertyGrid"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit">
     <ScrollViewer>
         <StackPanel>
             <xctk:PropertyGrid Margin="2" SelectedObject="{Binding}" />
         </StackPanel>
     </ScrollViewer>
-</Page>
+</UserControl>
