--- a/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/Pages/UpDownControls.xaml
+++ b/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/Pages/UpDownControls.xaml
@@ -1,13 +1,7 @@
-﻿<Page x:Class="ModernUI.Xceed.Toolkit.Example.Pages.UpDownControls"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-      mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
-      Title="UpDownControls">
-
+﻿<UserControl x:Class="ModernUI.Xceed.Toolkit.Example.Pages.UpDownControls"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit">
     <ScrollViewer>
         <StackPanel>
             <xctk:ByteUpDown Watermark="Byte Up/Down Example..." Margin="2" />
@@ -22,4 +16,4 @@
             <xctk:TimeSpanUpDown Watermark="TimeSpan Up/Down Example..." Margin="2" />
         </StackPanel>
     </ScrollViewer>
-</Page>
+</UserControl>
