[fix] TimePicker double border
[fix] CalculatorUpDown double button border
[fix] ButtonSpinner un-required borders
[fix] ColorPicker accent colors using standard xceed themes

--- a/ModernUI.Xceed/ModernUI.Xceed.Toolkit/Assets/Controls/ButtonSpinner.xaml
+++ b/ModernUI.Xceed/ModernUI.Xceed.Toolkit/Assets/Controls/ButtonSpinner.xaml
@@ -79,11 +79,13 @@
                                 <RepeatButton x:Name="PART_IncreaseButton"
                                    Style="{StaticResource {x:Type RepeatButton}}"
                                    Padding="0"
+                                   BorderThickness="0"
                                    IsTabStop="{TemplateBinding IsTabStop}" ContentTemplate="{StaticResource IncreaseGlyphNormalKey}" />
 
                                 <RepeatButton x:Name="PART_DecreaseButton"
                                    Grid.Row="1"
                                    Padding="0"
+                                   BorderThickness="0"
                                    Style="{StaticResource {x:Type RepeatButton}}"
                                    IsTabStop="{TemplateBinding IsTabStop}" ContentTemplate="{StaticResource DecreaseGlyphNormalKey}" />
 
