--- a/ModernUI.Xceed/ModernUI.Xceed.Toolkit/Assets/Controls/ColorPicker.xaml
+++ b/ModernUI.Xceed/ModernUI.Xceed.Toolkit/Assets/Controls/ColorPicker.xaml
@@ -1,8 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-                    xmlns:sys="clr-namespace:System;assembly=mscorlib"
-                    xmlns:themes="clr-namespace:Xceed.Wpf.Toolkit.Themes;assembly=Xceed.Wpf.Toolkit">
+                    xmlns:sys="clr-namespace:System;assembly=mscorlib">
 
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     <xctk:InverseBoolConverter x:Key="InverseBoolConverter" />
@@ -64,16 +63,12 @@
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver"
                            Value="True">
-                            <Setter TargetName="_outerBorder" Property="BorderBrush"
-                             Value="{DynamicResource {x:Static themes:ResourceKeys.ControlSelectedBorderKey}}" />
-                            <Setter TargetName="_innerBorder" Property="BorderBrush"
-                             Value="{DynamicResource {x:Static themes:ResourceKeys.ButtonMouseOverBackgroundKey}}" />
+                            <Setter TargetName="_outerBorder" Property="BorderBrush" Value="{DynamicResource Accent}" />
+                            <Setter TargetName="_innerBorder" Property="BorderBrush" Value="{DynamicResource Accent}" />
                         </Trigger>
                         <Trigger Property="IsSelected" Value="True">
-                            <Setter TargetName="_outerBorder" Property="BorderBrush"
-                             Value="{DynamicResource {x:Static themes:ResourceKeys.ControlSelectedBorderKey}}" />
-                            <Setter TargetName="_innerBorder" Property="BorderBrush"
-                             Value="{DynamicResource {x:Static themes:ResourceKeys.ButtonMouseOverBackgroundKey}}" />
+                            <Setter TargetName="_outerBorder" Property="BorderBrush" Value="{DynamicResource Accent}" />
+                            <Setter TargetName="_innerBorder" Property="BorderBrush" Value="{DynamicResource Accent}" />
                         </Trigger>
                         <DataTrigger Binding="{Binding DisplayColorAndName, RelativeSource={RelativeSource AncestorType={x:Type xctk:ColorPicker}}}"
                            Value="False">
@@ -89,7 +84,7 @@
     <DataTemplate x:Key="ColorItemTemplate">
         <Grid>
             <Border Background="{StaticResource CheckerBrush}"
-                 BorderBrush="{DynamicResource {x:Static themes:ResourceKeys.ControlNormalBorderKey}}"
+                 BorderBrush="{DynamicResource Accent}"
                  BorderThickness="1"
                  Margin="2,2,2,2">
                 <Rectangle Width="14"
@@ -146,7 +141,7 @@
                                  Width="7"
                                  Height="4"
                                  Data="M 0,1 C0,1 0,0 0,0 0,0 3,0 3,0 3,0 3,1 3,1 3,1 4,1 4,1 4,1 4,0 4,0 4,0 7,0 7,0 7,0 7,1 7,1 7,1 6,1 6,1 6,1 6,2 6,2 6,2 5,2 5,2 5,2 5,3 5,3 5,3 4,3 4,3 4,3 4,4 4,4 4,4 3,4 3,4 3,4 3,3 3,3 3,3 2,3 2,3 2,3 2,2 2,2 2,2 1,2 1,2 1,2 1,1 1,1 1,1 0,1 0,1 z"
-                                 Fill="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
+                                 Fill="{DynamicResource ItemText}" />
                                 </Grid>
                             </xctk:ButtonChrome>
                         </Grid>
@@ -237,7 +232,7 @@
                                               Margin="2,1,4,1"
                                               Style="{StaticResource ColorDisplayStyle}"
                                               BorderThickness="1"
-                                              BorderBrush="{DynamicResource {x:Static themes:ResourceKeys.ControlNormalBorderKey}}" />
+                                              BorderBrush="{DynamicResource Accent}" />
                                         <TextBlock Text="{Binding SelectedColorText, RelativeSource={RelativeSource TemplatedParent}}"
                                          VerticalAlignment="Center" />
                                     </StackPanel>
@@ -381,10 +376,10 @@
 
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="BorderBrush" Value="{DynamicResource {x:Static themes:ResourceKeys.ControlMouseOverBorderKey}}" />
+                <Setter Property="BorderBrush" Value="{DynamicResource Accent}" />
             </Trigger>
             <Trigger Property="IsKeyboardFocusWithin" Value="True">
-                <Setter Property="BorderBrush" Value="{DynamicResource {x:Static themes:ResourceKeys.ControlSelectedBorderKey}}" />
+                <Setter Property="BorderBrush" Value="{DynamicResource Accent}" />
             </Trigger>
         </Style.Triggers>
     </Style>
